--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -94,7 +94,7 @@ deploy:
     - when: always
   extends: .ssh-connection
   environment:
-    name: staging
+    name: staging-back
     url: http://$DEV_HOST:$DEV_APP_PORT
   script:
     - scp ./backend/sausage-store-backend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-backend.service
