--- a/backend/sausage-store-backend.service
+++ b/backend/sausage-store-backend.service
@@ -6,8 +6,8 @@ User=jarservice
 Environment=LOG_PATH=/opt/log/
 Environment=REPORT_PATH=/var/www-data/htdocs/
 Restart=always
-StandardOutput=file:/logs/out.log
-StandardError=file:/logs/out.log
+StandardOutput=file:/opt/log/sausage-store.log
+StandardError=file:/opt/log/sausage-store.log
 
 ExecStart=/usr/bin/java \
 -Dmyserver.basePath='/home/jarservice/' \
