--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -31,6 +31,13 @@
         </repository>
     </distributionManagement>
     <dependencies>
+
+       <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
