--- a/backend/sausage-store-backend.service
+++ b/backend/sausage-store-backend.service
@@ -18,7 +18,8 @@ ExecStart=/usr/bin/java \
 -jar '/home/jarservice/sausage-store.jar' \
 --spring.datasource.url=jdbc:postgresql://${PSQL_HOST}:${PSQL_PORT}/${PSQL_DBNAME}  \
 --spring.datasource.username=${PSQL_USER} \
---spring.datasource.password=${PSQL_PASSWORD}
+--spring.datasource.password=${PSQL_PASSWORD} \
+--spring.flyway.baselineOnMigrate=true
 SuccessExitStatus=143
 
 [Install]
