conf postgre and mongo in deploy stage

--- a/backend/sausage-store-backend.service
+++ b/backend/sausage-store-backend.service
@@ -19,7 +19,8 @@ ExecStart=/usr/bin/java \
 --spring.datasource.url=jdbc:postgresql://${PSQL_HOST}:${PSQL_PORT}/${PSQL_DBNAME}  \
 --spring.datasource.username=${PSQL_USER} \
 --spring.datasource.password=${PSQL_PASSWORD} \
---spring.flyway.baselineOnMigrate=true
+--spring.flyway.baselineOnMigrate=true \
+--spring.data.mongodb.uri=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_HOST}:27018/${MONGO_DATABASE}?tls=true
 SuccessExitStatus=143
 
 [Install]
