--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=false
 
 spring.data.mongodb.uri=mongodb://user:pass@host:port/db?tls=true
+spring.flyway.enabled=false
