--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,7 @@ RUN curl https://storage.yandexcloud.net/cloud-certs/CA.pem -o YandexInternalRoo
 # release
 FROM openjdk:16-jdk-alpine
 ARG VERSION=${VERSION}
+ENV BACKEND_PORT=8080
 WORKDIR /app
 COPY --from=builder /usr/src/app/YandexInternalRootCA.crt .
 # подкидываем CA-сертификат Яндекса в хранилище сертификатов для Java
@@ -24,7 +25,7 @@ RUN keytool -importcert -file YandexInternalRootCA.crt \
     && apk add --no-cache dumb-init==1.2.5-r0
 COPY --chown=jaruser:jaruser \
      --from=builder /usr/src/app/target/sausage-store-${VERSION}.jar ./sausage-store.jar
-EXPOSE 8080
+EXPOSE ${BACKEND_PORT}
 # приложение будет запускаться под пользователем jaruser
 USER jaruser
-ENTRYPOINT ["dumb-init", "java", "-jar", "-Dmyserver.bindPort=8080", "./sausage-store.jar"]
+ENTRYPOINT dumb-init java -jar -Dmyserver.bindPort=${BACKEND_PORT} ./sausage-store.jar
