--- a/template.gitlab-ci.yml
+++ b/template.gitlab-ci.yml
@@ -14,7 +14,7 @@
     before_script:
         - apk add openssh-client bash
         - eval $(ssh-agent -s)
-        - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+        - echo $SSH_PRIVATE_KEY | base64 -d | tr -d '\r' | ssh-add -
         - mkdir -p ~/.ssh
         - chmod 700 ~/.ssh
         - echo "$SSH_KNOWN_HOSTS" >> ~/.ssh/known_hosts
