--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -148,6 +148,9 @@ deploy-docker:
       export "SPRING_DATASOURCE_PASSWORD=${PSQL_PASSWORD}";
       export "SPRING_DATA_MONGODB_URI=mongodb://$MONGO_USER:$MONGO_PASSWORD@$MONGO_HOST:27018/$MONGO_DATABASE?tls=true";
       export "DOCKER_REGISTRY=${CI_REGISTRY}";
+      export "CI_REGISTRY_USER=${CI_REGISTRY_USER}";
+      export "CI_REGISTRY_PASSWORD=${CI_REGISTRY_PASSWORD}";
+      export "CI_REGISTRY_IMAGE=${CI_REGISTRY_IMAGE}";
       export "BACKEND_PORT=${BACKEND_PORT}";
       export "DOCKER_BACKEND_NAME=${DOCKER_BACKEND_NAME}";
       /bin/bash -s " < ./backend/backend_docker_deploy.sh
