--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -21,7 +21,7 @@ cache: &global_cache
     - .m2/repository
 
 
-build-code-job: # задача с именем build-code-job
+.build-code-job: # задача с именем build-code-job
   stage: build   # этап build
   cache:
     <<: *global_cache
@@ -35,6 +35,7 @@ build-code-job: # задача с именем build-code-job
 
 build-docker:
   stage: build
+  cache: []
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [ "" ]
@@ -62,6 +63,7 @@ build-docker:
 .sonarqube-backend-sast:
   stage: test
   image: maven:3.8-openjdk-16
+  cache: []
   script:
     - cd backend
     - >
@@ -111,6 +113,7 @@ upload-docker-latest:
   variables:
     GIT_STRATEGY: none
   image: docker:20.10.12-dind-rootless
+  cache: []
   stage: release
   before_script:
     - until docker info; do sleep 1; done
@@ -121,8 +124,9 @@ upload-docker-latest:
     - docker tag $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:latest
     - docker push $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:latest
 
-deploy:
+.deploy:
   stage: deploy
+  cache: []
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
@@ -137,6 +141,7 @@ deploy:
 
 deploy-docker:
   stage: deploy
+  cache: []
   image: alpine:3.15.0
   # если хотим сделать деплой по кнопке
   rules:
