--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -35,6 +35,21 @@ cache: &global_cache
 
 build-docker:
   stage: build
+  image: docker:20.10.12-dind-rootless
+  before_script:
+    - until docker info; do sleep 1; done
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  script:
+    - cd backend
+    - >
+      docker build
+      --build-arg VERSION=$VERSION
+      --tag $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA
+      .
+    - docker push $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:$CI_COMMIT_SHA
+
+build-docker-kaniko:
+  stage: build
   cache: []
   image:
     name: gcr.io/kaniko-project/executor:debug
@@ -46,7 +61,7 @@ build-docker:
         /kaniko/executor
         --context "${CI_PROJECT_DIR}/backend"
         --dockerfile "${CI_PROJECT_DIR}/backend/Dockerfile"
-        --destination "${CI_REGISTRY_IMAGE}/${DOCKER_BACKEND_NAME}:${CI_COMMIT_SHA}"
+        --destination "${CI_REGISTRY_IMAGE}/${DOCKER_BACKEND_NAME}:${CI_COMMIT_SHA}-kaniko"
         --cache=true
         --build-arg "VERSION=$VERSION"
 
@@ -73,7 +88,7 @@ build-docker:
       -Dsonar.login=${SONAR_LOGIN}
       -Dsonar.projectName=${SONAR_PROJECT_NAME_BACK}
 
-upload-release: # задача с именем upload-release
+.upload-release: # задача с именем upload-release
   stage: release # этап release
   cache:
     <<: *global_cache
@@ -109,7 +124,7 @@ upload-release: # задача с именем upload-release
       )
       curl -X POST -H "Content-type: application/json" --data "$DATA" ${NOTIFY_SLACK_URL}
 
-upload-docker-latest:
+.upload-docker-latest:
   variables:
     GIT_STRATEGY: none
   image: docker:20.10.12-dind-rootless
@@ -139,7 +154,7 @@ upload-docker-latest:
     - scp ./backend/sausage-store-backend.service ${DEV_USER}@${DEV_HOST}:/home/${DEV_USER}/sausage-store-backend.service
     - ssh ${DEV_USER}@${DEV_HOST} "export "CURRENT_VERSION=${VERSION}"; export "VERSION=${VERSION}"; export "DEV_HOST=${DEV_HOST}";export "NEXUS_REPO_BACKEND_URL=${NEXUS_REPO_BACKEND_URL}"; export "NEXUS_REPO_USER=${NEXUS_REPO_USER}"; export "NEXUS_REPO_PASS=$NEXUS_REPO_PASS"; export "PSQL_USER=$PSQL_USER"; export "PSQL_PASSWORD=$PSQL_PASSWORD"; export "PSQL_HOST=$PSQL_HOST"; export "PSQL_PORT=$PSQL_PORT"; export "PSQL_DBNAME=$PSQL_DBNAME"; export "MONGO_USER=$MONGO_USER"; export "MONGO_PASSWORD=$MONGO_PASSWORD"; export "MONGO_HOST=$MONGO_HOST"; export "MONGO_DATABASE=$MONGO_DATABASE"; setsid /bin/bash -s " < ./backend/deploy.sh
 
-deploy-docker:
+.deploy-docker:
   stage: deploy
   cache: []
   image: alpine:3.15.0
