--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,11 +3,12 @@ FROM maven:3.8.2-openjdk-16-slim as builder
 # задаём переменную VERSION, которая будет использоваться для сборки проекта
 ARG VERSION=${VERSION}
 WORKDIR /usr/src/app
-COPY ./src ./src
 COPY *.xml ./
-# копируем CA-сертификат Яндекса в образ
 RUN curl https://storage.yandexcloud.net/cloud-certs/CA.pem -o YandexInternalRootCA.crt \
-    && mvn package -Dversion.application=${VERSION}
+    && mvn dependency:resolve -Dversion.application=${VERSION}
+COPY ./src ./src
+
+RUN mvn package -Dversion.application=${VERSION} -Dmaven.repo.local=.m2/repository
 
 # release
 FROM openjdk:16-jdk-alpine
