backend test postman

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ ARG VERSION=${VERSION}
 WORKDIR /usr/src/app
 COPY *.xml ./
 RUN curl https://storage.yandexcloud.net/cloud-certs/CA.pem -o YandexInternalRootCA.crt \
-    && mvn dependency:resolve -Dversion.application=${VERSION}
+    && mvn dependency:sources -Dversion.application=${VERSION}
 COPY ./src ./src
 RUN mvn package -Dversion.application=${VERSION} -Dmaven.repo.local=.m2/repository
 
