--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -69,8 +69,8 @@ test-docker-image:
   script:
     - newman --version
     - npm install -g newman-reporter-html
-    - sed -i 's/BACKEND_URL/backend/g' POSTMAN_ENVIRONMENT
-    - sed -i 's/BACKEND_PORT/${BACKEND_PORT}/g' POSTMAN_ENVIRONMENT
+    - sed -i 's/BACKEND_URL/backend/g' ${POSTMAN_ENVIRONMENT}
+    - sed -i 's/BACKEND_PORT/${BACKEND_PORT}/g' ${POSTMAN_ENVIRONMENT}
     - newman run ${POSTMAN_COLLECTION1} -e ${POSTMAN_ENVIRONMENT} --reporters cli,html --reporter-html-export report.html
   artifacts:
     when: always
