--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -60,6 +60,14 @@ docker-image-test:
     - name: $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:195a57b7206bf21d2ed96e6323efeb8cd7c4330c-kaniko
 #${CI_COMMIT_SHA}-kaniko
       alias: backend
+      variables:
+        SPRING_DATASOURCE_URL: jdbc:postgresql://${PSQL_HOST}:${PSQL_PORT}/${PSQL_DBNAME}"
+        SPRING_DATASOURCE_USERNAME: ${PSQL_USER}
+        SPRING_DATASOURCE_PASSWORD: ${PSQL_PASSWORD}
+        SPRING_DATA_MONGODB_URI: mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_HOST}:27018/${MONGO_DATABASE}?tls=true
+        LOG_PATH: /opt/log/
+        REPORT_PATH: /opt/log/
+        BACKEND_PORT: ${BACKEND_PORT}
   cache: []
   stage: test
   variables:
@@ -70,7 +78,7 @@ docker-image-test:
     - newman --version
     - npm install -g newman-reporter-html
     - sed -i 's/BACKEND_URL/backend/g' ${POSTMAN_ENVIRONMENT}
-    - sed -i 's/BACKEND_PORT/8080/g' ${POSTMAN_ENVIRONMENT}
+    - sed -i 's|BACKEND_PORT|${BACKEND_PORT}|g' ${POSTMAN_ENVIRONMENT}
     - newman run ${POSTMAN_COLLECTION} -e ${POSTMAN_ENVIRONMENT} --reporters cli,html --reporter-html-export report.html
   artifacts:
     when: always
