--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -77,6 +77,8 @@ docker-image-test:
     - sed -i 's/BACKEND_URL/backend/g' ${POSTMAN_ENVIRONMENT}
     - sed -i 's@BACKEND_PORT@'"$BACKEND_PORT"'@' ${POSTMAN_ENVIRONMENT}
     - sleep 40
+    - apt install curl -y
+    - curl http://backend:8080
     - newman run ${POSTMAN_COLLECTION} -e ${POSTMAN_ENVIRONMENT} --reporters cli,html --reporter-html-export report.html
   artifacts:
     when: always
