--- a/backend/.gitlab-ci.yml
+++ b/backend/.gitlab-ci.yml
@@ -52,7 +52,8 @@ cache: &global_cache
 
 docker-image-test:
   image:
-    name: postman/newman:alpine
+    name: curlimages/curl
+    #postman/newman:alpine
     entrypoint: [ "" ]
   services:
     - name: $CI_REGISTRY_IMAGE/$DOCKER_BACKEND_NAME:latest
@@ -72,14 +73,14 @@ docker-image-test:
     REPORT_PATH: /opt/log/
     BACKEND_PORT: ${BACKEND_PORT}
   script:
-    - newman --version
-    - npm install -g newman-reporter-html
-    - sed -i 's/BACKEND_URL/backend/g' ${POSTMAN_ENVIRONMENT}
-    - sed -i 's@BACKEND_PORT@'"$BACKEND_PORT"'@' ${POSTMAN_ENVIRONMENT}
+#    - newman --version
+#    - npm install -g newman-reporter-html
+#    - sed -i 's/BACKEND_URL/backend/g' ${POSTMAN_ENVIRONMENT}
+#    - sed -i 's@BACKEND_PORT@'"$BACKEND_PORT"'@' ${POSTMAN_ENVIRONMENT}
     - sleep 40
-    - apt install curl -y
+#    - apt install curl -y
     - curl http://backend:8080
-    - newman run ${POSTMAN_COLLECTION} -e ${POSTMAN_ENVIRONMENT} --reporters cli,html --reporter-html-export report.html
+#    - newman run ${POSTMAN_COLLECTION} -e ${POSTMAN_ENVIRONMENT} --reporters cli,html --reporter-html-export report.html
   artifacts:
     when: always
     paths:
